--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ github:
   repo:           https://github.com/dantaylor688.github.io
 
 collections:
-   sunday-school-lessons:
+   sunday-school:
        output: true
 
 pages_list:
